--- a/.classpath
+++ b/.classpath
@@ -7,15 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/davim/eclipse-workspace/Java_Poo/dependencias/oblesqbom.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/davim/eclipse-workspace/Java_Poo/dependencias/PersistenciaObjetos.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/davim/eclipse-workspace/Java_Poo/dependencias/oblesqbom.jar"/>
+	<classpathentry kind="lib" path="C:/Users/davim/eclipse-workspace/Java_Poo/dependencias/PersistenciaObjetos.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
